change  compiler settings