@@ -584,9 +584,13 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>${maven_compiler_plugin_version}</version>
 					<configuration>
+                        <fork>true</fork>
 						<source>${java_source_version}</source>
 						<target>${java_target_version}</target>
 						<encoding>${file_encoding}</encoding>
+                        <compilerArgs>
+                            <arg>-XX:MaxPermSize=512M</arg>
+                        </compilerArgs>
 					</configuration>
 				</plugin>
 				<!--This plugin's configuration is used to store Eclipse m2e settings
